[package]
name = "okane-golden"
authors = ["kikeg"]
version = "0.2.0"
edition = "2018"
rust-version = "1.78.0"
license = "Apache-2.0"
repository = "https://github.com/xkikeg/okane-golden"

[dependencies]
pretty_assertions = "1.4.1"

[dev-dependencies]
regex = "1.7.3"
temp-env = "0.3.3"
tempfile = "3.4.0"
